# Configuration of the Python project

# Configure setup.py
[metadata]
name = sort-tracker-py
version = 1.0.2
author = Alex Bewley
maintainer = Andres Prados Torreblanca
maintainer_email = andresprator@gmail.com
description = SORT A Simple, Online and Realtime Tracker
long_description = file: README.md
long_description_content_type= text/markdown
license = GPLv3
url = https://github.com/andresprados/sort
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >= 3.6
install_requires =
    numpy>=1.18.2
    scipy
    filterpy>=1.4.5
    lap>=0.4.0

[options.packages.find]
exclude =
    data*

